midterm/migration/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: migration-network-policy
spec:
  podSelector:
    matchLabels:
      app: midterm-app
      role: migration

  policyTypes:
  - Egress

  egress:
  - to:
    - podSelector:
        matchLabels:
          app: midterm-app
          role: database
    ports:
    - protocol: TCP
      port: 5432

  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
